FileUtil support for running with executable JAR